# pypowertrain

./: .gitignore  LICENSE  README.md  environment.yml  getting_started.ipynb  pyproject.toml  todo.md
.devcontainer/: devcontainer.json  dockerfile  postCreateCommand.sh
.github/workflows/: pages.yml
pypowertrain/: app.py  launch.py  optimize.py  system.py  utils.py
pypowertrain/bike/: bike.py  bike_models.py
pypowertrain/bike/test/: test_bike.py  test_bike_optimize.py  test_grin.py
pypowertrain/components/: actuator.py  battery.py  bus.py  controller.py  gearing.py  motor.py  thermal.py
pypowertrain/components/motor/: __init__.py  electrical.py  geometry.py  mass.py  motor.py  thermal.py
pypowertrain/components/motor/test/: test_electrical.py  test_geometry.py  test_mass.py  test_motor.py  test_thermal.py
pypowertrain/components/test/: test_actuator.py  test_battery.py  test_motor.py  test_thermal.py
pypowertrain/test/: test_optimize.py  test_system.py  test_util.py
webapp/: app.py  build.sh  requirements.txt
